--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     var y = 200;
     var size = 50;
     ctx.fillStyle = "red";
-    ctx.fillRect(x,y,size,size);
+    for (var i = 0; i < 10; i++) {
+        ctx.fillRect(x,y,size,size);
+        x += 60;
+    }
 </script>
 </body>
 </html>
