--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
     var y =  10;
     var size = 50;
     ctx.fillStyle = "red";
-    for (var i = 0; i < 10; i++) {
-        ctx.fillRect(x,y,size,size);
-        x += 60;
+    for (var r = 0; r < 10; r++) {
+        for (var c = 0; c < 10; c++) {
+            ctx.fillRect(x,y,size,size);
+            x += 60;
+            size -= 5;
+        }
         y += 60;
-        size -= 5;
+        x = 10;
     }
 </script>
 </body>
